fix tests: use h2 in tests, add assertions in MyPersonTest.insertUpdate